added sidebar and footer components

--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -5,8 +5,8 @@ date: 2020-8-03 07:09:00
 author: 'Jone Doe'
 image: ../../images/javascript.jpg
 tags: 
-- design
-- tutorials
+- Design
+- Tutorials
 ---
 
 This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
