--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -1,5 +1,5 @@
 ---
-path: '/third-post'
+
 title: 'Third Post - CSS'
 date: 2020-8-03 07:09:00
 author: 'Jone Doe'
@@ -9,4 +9,7 @@ tags:
 - Tutorials
 ---
 
+This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
+This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
+This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
 This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
