--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -2,7 +2,7 @@
 
 title: 'Third Post - CSS'
 date: 2020-8-03 07:09:00
-author: 'Jone Doe'
+author: 'John Doe'
 image: ../../images/javascript.jpg
 tags: 
 - Design
