--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -2,7 +2,7 @@
 
 title: 'Third Post - CSS'
 date: 2020-8-03 07:09:00
-author: 'John Doe'
+author: 'Kc Pele'
 image: ../../images/javascript.jpg
 tags: 
 - Design
@@ -10,6 +10,4 @@ tags:
 ---
 
 This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
-This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
-This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
-This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
+This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
