added and change the teams page

--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -3,7 +3,7 @@
 title: 'Third Post - CSS'
 date: 2020-8-03 07:09:00
 author: 'Kc Pele'
-image: ../../images/javascript.jpg
+image: ../../images/css.jpg
 tags: 
 - Design
 - Tutorials
