--- a/src/pages/posts/003.third-post.md
+++ b/src/pages/posts/003.third-post.md
@@ -9,5 +9,17 @@ tags:
 - Tutorials
 ---
 
-This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
-This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, This time we are going to dive into css, 
+CSS is a stylesheet language that describes the presentation of an HTML (or XML) document.
+
+CSS describes how elements must be rendered on screen, on paper, or in other media.
+
+This tutorial will teach you CSS from basic to advanced.
+
+What is CSS?
+CSS stands for Cascading Style Sheets
+CSS describes how HTML elements are to be displayed on screen, paper, or in other media
+CSS saves a lot of work. It can control the layout of multiple web pages all at once
+External stylesheets are stored in CSS files
+CSS Demo - One HTML Page - Multiple Styles!
+Here we will show one HTML page displayed with four different stylesheets. Click on the "Stylesheet 1", "Stylesheet 2", "Stylesheet 3", "Stylesheet 4" links below to see the different styles:
+This time we are going to dive into css, This time we are going to dive into css, 
